--- a/api/package.json
+++ b/api/package.json
@@ -4,21 +4,25 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "ts-node-dev index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sequelize": "^4.28.14",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
     "nodemon": "^2.0.21"
   }
