--- a/api/package.json
+++ b/api/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/sequelize": "^4.28.14",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mariadb": "^3.1.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.2.0",
     "sequelize": "^6.29.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
