--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "mariadb": "^3.1.0",
     "morgan": "^1.10.0",
+    "mysql2": "^3.2.0",
     "sequelize": "^6.29.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
