--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
+    "cookie": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
@@ -24,6 +26,7 @@
     "source-map-loader": "^4.0.1",
     "sweetalert": "^2.1.2",
     "typescript": "^4.9.5",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
