--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.1",
+    "sharp": "^0.32.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.9.5"
