--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
+    "path": "^0.12.7",
     "sequelize": "^6.29.1",
     "sharp": "^0.32.0",
     "ts-node": "^10.9.1",
