--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "build",
+    "lib": ["es6"],
     "target": "es6",
     "module": "commonjs",
     "strict": true,
