--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "ts-node-dev ./src/index.ts",
     "start": "node ./build/index.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest",
+    "test 01": "npx jest ./01-supplier.test.js",
+    "test 02": "npx jest ./02-product.test.js",
+    "test 03": "npx jest ./03-invoices.test.js",
+    "test 04": "npx jest ./04-servicesInvoices.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,10 +21,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mariadb": "^3.1.0",
+    "mariadb": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.2.0",
     "path": "^0.12.7",
     "sequelize": "^6.29.1",
     "sharp": "^0.32.0",
@@ -39,6 +42,7 @@
     "@types/sequelize": "^4.28.14",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0"
   }
 }
