--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "pdfkit": "^0.13.0",
     "sequelize": "^6.29.1",
     "sharp": "^0.32.0",
     "ts-node": "^10.9.1",
@@ -39,6 +40,7 @@
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.6",
+    "@types/pdfkit": "^0.12.9",
     "@types/sequelize": "^4.28.14",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
