Update documentation and test

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ DB_PASSWORD=passwors
 DB_HOST=localhost
 DB_PORT=3001
 DB_NAME=nameDB
+URL_LOCAL=localhost:PORT
+URL_PRODUCTION=https://api.infotecnik.cat
 NODE_ENV=environment
