--- a/package.json
+++ b/package.json
@@ -39,15 +39,16 @@
     "@types/cors": "^2.8.13",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.6",
     "@types/pdfkit": "^0.12.9",
     "@types/sequelize": "^4.28.14",
-    "jest": "^29.5.0",
+    "jest": "^29.6.2",
     "nodemon": "^2.0.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.1"
   }
 }
